--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -167,6 +167,8 @@ Machu Picchu =
  # Requires translation!
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = Van alle handelroutes +25% goud
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
  # Requires translation!
 Aqueduct = 
@@ -1051,6 +1053,7 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
+Saving... =
 
 # Options
 
@@ -1599,6 +1602,11 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
  # Requires translation!
 Language = 
  # Requires translation!
@@ -2759,6 +2767,22 @@ Reduces damage taken from interception by 50% =
 Bonus when intercepting [amount]% = 
 Ambush I = Hinderlaag I
 Ambush II = Hinderlaag II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
  # Requires translation!
