--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -119,6 +119,8 @@ Mint = Hôtel de la monnaie
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Peu de sites romantiques peuvent surpasser la citadelle de granit au sommet des précipices des scarabées du Machu Picchu, la couronne du pays inca.' - Hiram Bingham
 Gold from all trade routes +25% = Or de toutes les routes commerciales + 25%
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Aqueduc
 40% of food is carried over after a new citizen is born = 40% de la nourriture est préservée après la naissance d'un nouveau citoyen
@@ -312,7 +314,6 @@ Declare war on [civName]? = Déclarer la guerre à [civName]?
 [leaderName] of [nation] = [leaderName] de [nation]
 You'll pay for this! = Vous allez payer pour cela!
 Negotiate Peace = Négocier la paix
- # Requires translation!
 Peace with [civName]? = Faire la Paix avec [civName] ?
 Very well. = Très bien.
 Farewell. = Adieu.
@@ -372,53 +373,29 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
- # Requires translation!
 Manila = Manille
- # Requires translation!
 Kuala Lumpur = Kuala Lumpur
- # Requires translation!
 Helsinki = Helsinki
- # Requires translation!
 Quebec City = Québec 
- # Requires translation!
 Hanoi = Hanoï
- # Requires translation!
 Kathmandu = Katmandou
- # Requires translation!
 Cape Town = Le Cap
- # Requires translation!
 Sydney = Sydney
- # Requires translation!
 Zanzibar = Zanzibar
- # Requires translation!
 Singapore = Singapour
- # Requires translation!
 Edinburgh = Édimbourg
- # Requires translation!
 Almaty = Almaty
- # Requires translation!
 Sidon = Sidon
- # Requires translation!
 Kabul = Kaboul
- # Requires translation!
 Brussels = Bruxelles
- # Requires translation!
 Venice = Venise
- # Requires translation!
 Genoa = Gênes
- # Requires translation!
 Ur = Ur
- # Requires translation!
 Tyre = Tyr
- # Requires translation!
 Dublin = Dublin
- # Requires translation!
 Antwerp = Anvers
- # Requires translation!
 Rio de Janeiro = Rio de Janeiro
- # Requires translation!
 Florence = Florence
- # Requires translation!
 Milan = Milan
 
 Provides [amountOfCulture] culture at 30 Influence = Fournit [amountOfCulture] de Culture à 30 d'influence
@@ -570,13 +547,9 @@ Map type = Type de carte
 Generated = Généré
 Existing = Existant
 Map generation type = Type de carte générée
- # Requires translation!
 Default = Défaut
- # Requires translation!
 Pangaea = Pangée
- # Requires translation!
 Perlin = Perlin
- # Requires translation!
 Continents = Continents
 Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
@@ -661,6 +634,7 @@ Are you sure you want to delete this map? = Etes-vous certain de vouloir supprim
 Upload map = Télécharger une carte
 Could not upload map! = Impossible de télécharger la carte !
 Map uploaded successfully! = Carte téléchargée avec succès !
+Saving... =
 
 # Options
 
@@ -762,7 +736,6 @@ Your relationship with [cityStateName] is about to degrade = Notre relation avec
 Your relationship with [cityStateName] degraded = Notre relation avec [cityStateName] est dégradée
 A new barbarian encampment has spawned! = Un nouveau campement barbare est apparu !
 Received [goldAmount] Gold for capturing [cityName] = Vous recevez [goldAmount] Or pour la capture de [cityName]
- # Requires translation!
 Our proposed trade request is no longer relevant! = Notre demande commerciale n'est plus pertinente !
 
 # World Screen UI
@@ -1009,6 +982,11 @@ Version = Version
 Resolution = Résolution
 Tileset = Taille des cases
 Map editor = Editeur de carte
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = langage
 Terrains & Resources = Terrains & Ressources
 Improvements = Améliorations
@@ -1692,6 +1670,21 @@ Bonus when intercepting [amount]% = Bonus en interception de [amount]%
 Ambush I = Embuscade I
 Ambush II = Embuscade II
  # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Can carry 2 aircraft = Peut transporter 2 avions
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
