--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -124,6 +124,8 @@ Machu Picchu = Machu Picchu
  # Requires translation!
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = Gold von allen Handelsrouten um 25% erhöht
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Aquädukt
 40% of food is carried over after a new citizen is born = 40% der Nahrung wird übertragen, wenn ein neuer Einwohner geboren wird
@@ -676,6 +678,7 @@ Are you sure you want to delete this map? = Karte wirklich löschen?
 Upload map = Karte hochladen
 Could not upload map! = Kann Karte nicht hochladen!
 Map uploaded successfully! = Karte hochladen war erfolgreich!
+Saving... =
 
 # Options
 
@@ -1036,6 +1039,11 @@ Version = Version
 Resolution = Auflösung
 Tileset = Felderset
 Map editor = Karteneditor
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Sprache
 Terrains & Resources = Gelände & Ressourcen
 Improvements = Verbesserungen
@@ -1754,6 +1762,22 @@ Reduces damage taken from interception by 50% = Reduziert den empfangenden Schad
 Bonus when intercepting [amount]% = [amount]% Bonus beim Abfangen
 Ambush I = Lufthinterhalt I
 Ambush II = Lufthinterhalt II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
 Haka War Dance = Haka Kriegstanz
