--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -126,6 +126,8 @@ Machu Picchu = Machu Picchu
  # Requires translation!
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = +25% emas dari seluruh rute perdagangan
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Terowongan Air
 40% of food is carried over after a new citizen is born = 40% makanan dibawa saat penduduk baru lahir
@@ -687,6 +689,7 @@ Are you sure you want to delete this map? = Apakah yakin untuk menghapus peta in
 Upload map = Upload peta
 Could not upload map! = Tidak bisa upload peta!
 Map uploaded successfully! = Map telah sukses diupload!
+Saving... =
 
 # Options
 
@@ -1081,6 +1084,11 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
  # Requires translation!
 Language = 
  # Requires translation!
@@ -2056,6 +2064,22 @@ Reduces damage taken from interception by 50% = Mengurangi kerusakan yang diteri
 Bonus when intercepting [amount]% = Bonus ketika mencegat [amount]%
 Ambush I = Sergapan I
 Ambush II = Sergapan II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
 Haka War Dance = Tarian Perang Haka
