--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -119,6 +119,8 @@ Mint = Zecca
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Pochi racconti fantastici possono sorpassare quello della cittadella di granito sospesa in cima ai precipizi, Machu Picchu, la corona delle terre degli Inca.' - Hiram Bingham
 Gold from all trade routes +25% = +25% oro da ogni rotta commerciale
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Acquedotto
 40% of food is carried over after a new citizen is born = Il 40% del cibo viene immagazzinato dopo la nascita di un nuovo cittadino
@@ -300,7 +302,7 @@ Queue empty = Coda vuota
 Add to queue = Aggiungi a coda
 Remove from queue = Rimuovi da coda
 Show stats drilldown = Mostra riepilogo statistiche
-Show construction queue = Mostra coda di costruzione
+Show construction queue = Mostra coda costruzione
 
 Diplomacy = Diplomazia
 War = Guerra
@@ -394,10 +396,6 @@ Antwerp = Anversa
 Rio de Janeiro = Rio de Janeiro
 Florence = Firenze
 Milan = Milano
-M'Banza-Kongo = M'Banza-Kongo
-Vancouver = Vancouver
-Lhasa = Lhasa
-Mogadishu = Mogadiscio
 
 Provides [amountOfCulture] culture at 30 Influence = Dona [amountOfCulture] punti Cultura a minimo 30 Punti Influenza
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Dona 3 Cibo alla Capitale e 1 Cibo alle altre Città a minimo 30 Punti Influenza
@@ -635,6 +633,7 @@ Are you sure you want to delete this map? = Vuoi davvero cancellare questa mappa
 Upload map = Carica
 Could not upload map! = Impossibile caricare mappa!
 Map uploaded successfully! = Mappa caricata con successo
+Saving... =
 
 # Options
 
@@ -823,7 +822,6 @@ Specialist Buildings = Edifici specialisti
 Specialist Allocation = Assegna specialisti
 Specialists = Specialisti
 Food eaten = Cibo consumato
-Excess food to production = Cibo in eccesso per produzione
 Growth bonus = Bonus crescita
 Unassigned population = Popolazione libera
 [turnsToExpansion] turns to expansion = Espansione dei confini tra [turnsToExpansion] turni
@@ -842,9 +840,6 @@ Points per turn = Punti per turno
 Convert production to gold at a rate of 4 to 1 = Converte la Produzione a Oro a un tasso di 4 a 1
 Convert production to science at a rate of 4 to 1 = Converte la Produzione a Scienza a un tasso di 4 a 1
 The city will not produce anything. = La città non produrrà nulla
-Show stats drilldown = Mostra riepilogo statistiche
-Show construction queue = Mostra coda costruzione
-
 
 # Technology UI
 
@@ -986,6 +981,11 @@ Version = Versione
 Resolution = Risoluzione
 Tileset = Set celle
 Map editor = Editor mappe
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Lingua
 Terrains & Resources = Terreni e risorse
 Improvements = Miglioramenti
@@ -1667,6 +1667,22 @@ Reduces damage taken from interception by 50% = Dimezza i danni da intercettazio
 Bonus when intercepting [amount]% = [amount]% bonus d'intercettazione
 Ambush I = Imboscata aerea I
 Ambush II = Imboscata aerea II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Can carry 2 aircraft = Trasporta due unità aeree
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa
