--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -124,6 +124,8 @@ Mint = Casa da moeda
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Poucos romances podem se quer superar o da cidadela de granito no topo do precipício de Machu Picchu, a coroa da terra Inca.' - Hiram Bingham
 Gold from all trade routes +25% = +25% de ouro de todas as rotas comerciais
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Aqueduto
 40% of food is carried over after a new citizen is born = 40% da comida é mantida depois de um novo cidadão nascer
@@ -694,6 +696,7 @@ Are you sure you want to delete this map? = Tem certeza que quer deletar esse ma
 Upload map = Carregar mapa
 Could not upload map! = Não foi possível carregar mapa!
 Map uploaded successfully! = Mapa carregado com sucesso!
+Saving... =
 
 # Options
 
@@ -1131,6 +1134,11 @@ Version = Versão
 Resolution = Resolução
 Tileset = Estilo mapa
 Map editor = Editor de mapa
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Língua
  # Requires translation!
 Terrains & Resources = 
@@ -1940,6 +1948,22 @@ Reduces damage taken from interception by 50% = Reduz o dano recebido de interce
 Bonus when intercepting [amount]% = [amount]% de bônus ao interceptar
 Ambush I = Emboscada Aérea I
 Ambush II = Emboscada Aérea II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
 Haka War Dance = Dança de Guerra Haka
