--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -18,8 +18,8 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 查看当前文明详细信息!\n点击概览按钮(右上角) >\n点击"统计"
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = NO!看起来游戏好像出现了灾难性的Bug! 这绝对不应该发生! 请将游戏存档信息发送给我，方法如下：依次点击“菜单->保存游戏->复制当前游戏数据到剪贴板”，将剪贴板的内容通过email发送给我。我的email地址：yairm210@hotmail.com。我会尽快处理!
- # Requires translation!
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! = 哦，不！好像出了什么大问题！这绝不应该发生！请给我们发送一份报告，我们会尽快将它修复完毕！
+
 # Buildings
 
 ## Ancient era buildings
@@ -122,6 +122,8 @@ Mint = 铸币厂
 Machu Picchu = 马丘比丘
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = “很少有能超越这座建立在马丘比丘顶峰峭壁上的石头城塞的浪漫，它是印加的皇冠。”——海勒姆·宾厄姆（美国探险家）
 Gold from all trade routes +25% = 所有贸易路线的金币收益+25%
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = 引水渠
 40% of food is carried over after a new citizen is born = 城市增加新的市民后保留40%食物储备以加速成长
@@ -159,7 +161,6 @@ Cost of acquiring new tiles reduced by 25% = 购买新地块花费-25%
 Porcelain Tower = 大报恩寺塔
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = “我们所失去的总是要在回望之时才更知道它的美好，而那曾经不可一世的高塔如今是多么的渴望能够有所依靠。”——詹姆斯·罗素·洛威尔（美国诗人）
 Free great scientist appears = 免费的大科学家出现
- # Requires translation!
 Science gained from research agreements +50% = 科研协定产出的科研+50%
 
 Ironworks = 钢铁厂
@@ -636,6 +637,7 @@ Are you sure you want to delete this map? = 您真想删除这张地图吗？
 Upload map = 上传地图
 Could not upload map! = 无法上传地图！
 Map uploaded successfully! = 地图上传成功！
+Saving... =
 
 # Options
 
@@ -984,6 +986,11 @@ Version = 版本
 Resolution = 分辨率
 Tileset = 地块设置
 Map editor = 地图编辑器
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = 语言设置
 Terrains & Resources = 地形地貌与资源
 Improvements = 设施
@@ -1020,7 +1027,6 @@ Victory Types = 胜利类型
 Workers = 工人
 
 # Other civilopedia things
-
 Nations = 领袖
 Promotions = 晋升
 Available for [unitTypes] = 用于[unitTypes]
@@ -1674,6 +1680,22 @@ Reduces damage taken from interception by 50% = 遭受拦截时的损伤-50%
 Bonus when intercepting [amount]% = 执行拦截任务时+[amount]%战斗力
 Ambush I = 伏击I级
 Ambush II = 伏击II级
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Can carry 2 aircraft = 可以带两家飞机
 Haka War Dance = 哈卡战舞
 -10% combat strength for adjacent enemy units = 相邻的敌方单位-10%战斗力
