--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -119,6 +119,8 @@ Mint = Casa de la moneda
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Pocas historias pueden llegar a superar la de esa ciudadela de granito en la cima de los salientes precipicios de Machu Picchu, corona de la Tierra de los Incas.- Hiram Bingham
 Gold from all trade routes +25% = +25% de oro en todas las rutas de comercio
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Acueducto
 40% of food is carried over after a new citizen is born = 40% de comida es traspasado cada vez que nace un nuevo habitante
@@ -661,6 +663,7 @@ Are you sure you want to delete this map? = ¿Estas seguro de que quieres borrar
 Upload map = Subir mapa
 Could not upload map! = ¡No se pudo subir el mapa!
 Map uploaded successfully! = ¡Se ha subido el mapa correctamente!
+Saving... =
 
 # Options
 
@@ -1009,6 +1012,11 @@ Version = Versión
 Resolution = Resolución
 Tileset = Tileset
 Map editor = Editor de mapa
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Idioma
 Terrains & Resources = Terrenos y recursos
 Improvements = Mejoras
@@ -1691,6 +1699,22 @@ Reduces damage taken from interception by 50% = Reduce el daño recibido por int
 Bonus when intercepting [amount]% = [amount]% de bonus al interceptar
 Ambush I = Emboscada I
 Ambush II = Emboscada II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
 Haka War Dance = Danza de la guerra Haka
