--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -123,6 +123,8 @@ Mint = 鑄幣廠
 Machu Picchu = 馬丘比丘
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = “很少有能超越這座建立在馬丘比丘頂峰峭壁上的石頭城塞的浪漫，它是印加的皇冠。”——海勒姆·賓厄姆（美國探險家）
 Gold from all trade routes +25% = 所有貿易路線的金錢收益+25%
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = 引水渠
 40% of food is carried over after a new citizen is born = 城市增加新的市民後保留40%食物儲備以加速成長
@@ -160,7 +162,6 @@ Cost of acquiring new tiles reduced by 25% = 購買新地塊花費-25%
 Porcelain Tower = 大報恩寺塔
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = “我們所失去的總是要在回望之時才更知道它的美好，而那曾經不可一世的高塔如今是多麼的可望能夠有所依靠。”——詹姆斯·羅素·洛威爾（美國詩人）
 Free great scientist appears = 免費的大科學家出現
- # Requires translation!
 Science gained from research agreements +50% = 科研協定產出的科研+50%
 
 Ironworks = 鋼鐵廠
@@ -677,6 +678,7 @@ Are you sure you want to delete this map? = 你真的想刪除這張地圖嗎？
 Upload map = 上傳地圖
 Could not upload map! = 無法上傳地圖！
 Map uploaded successfully! = 成功上傳地圖！
+Saving... =
 
 # Options
 
@@ -1039,6 +1041,11 @@ Version = 版本
 Resolution = 解析度
 Tileset = 地塊設定
 Map editor = 地圖編輯器
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = 語言設定
 Terrains & Resources = 地形地貌與資源
 Improvements = 設施
@@ -1749,6 +1756,22 @@ Reduces damage taken from interception by 50% = 遭受攔截時的損傷-50%
 Bonus when intercepting [amount]% = 執行攔截任務時+[amount]%戰鬥力
 Ambush I = 伏擊I級
 Ambush II = 伏擊II級
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
 Haka War Dance = 哈卡戰舞
