--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -632,7 +632,7 @@ Are you sure you want to delete this map? = Ви впевнені, що бажа
 Upload map = Вивантажити мапу
 Could not upload map! = Неможливо вивантажити мапу!
 Map uploaded successfully! = Мапа вивантажена успішно!
-Saving... = Збереження...
+Saving... =
 
 # Options
 
@@ -980,6 +980,11 @@ Version = Версія
 Resolution = Роздільність
 Tileset = Палітра клітинок
 Map editor = Редактор мап
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Мова
 Terrains & Resources = Місцевість і ресурси
 Improvements = Удосконалення
@@ -1661,6 +1666,22 @@ Reduces damage taken from interception by 50% = Пошкодження від п
 Bonus when intercepting [amount]% = При перехопленні отримує силу +[amount]%
 Ambush I = Засідка I
 Ambush II = Засідка II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Can carry 2 aircraft = Може нести 2 літальні апарати
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
