--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -124,6 +124,8 @@ Mint = Mincovna
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Těžko se hledá romantika, jenž může někdy překonat žulové citadely na vrcholu broukavých srázů Machu Picchu, koruny Incké země.' - Hiram Bingham
 Gold from all trade routes +25% = +25% Zlata ze všech obchodních cest
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Akvadukt
 40% of food is carried over after a new citizen is born = 40% Jídla je zachováno poté, co se město rozroste o nového obyvatele
@@ -682,6 +684,7 @@ Are you sure you want to delete this map? = Jste si jistý(á), že chcete smaza
 Upload map = Nahrát mapu
 Could not upload map! = Nelze nahrát mapu!
 Map uploaded successfully! = Mapa úspěšně nahrána!
+Saving... =
 
 # Options
 
@@ -1042,6 +1045,11 @@ Version = Verze
 Resolution = Rozlišení
 Tileset = Políčka
 Map editor = Editor mapy
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Jazyk
 Terrains & Resources = Terén & Zdroje
 Improvements = Vylepšení
@@ -1755,6 +1763,22 @@ Reduces damage taken from interception by 50% = Redukuje škody způsobené inte
 Bonus when intercepting [amount]% = Bonus při zachytávání útoků [amount]%
 Ambush I = Přepadení I
 Ambush II = Přepadení II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
 Haka War Dance = Haka - valečný tanec
