--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -204,6 +204,8 @@ Machu Picchu =
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
  # Requires translation!
 Gold from all trade routes +25% = 
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
  # Requires translation!
 Aqueduct = 
@@ -1131,6 +1133,7 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
+Saving... =
 
 # Options
 
@@ -1802,6 +1805,11 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
  # Requires translation!
 Language = 
  # Requires translation!
