--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -183,6 +183,8 @@ Machu Picchu =
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
  # Requires translation!
 Gold from all trade routes +25% = 
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
  # Requires translation!
 Aqueduct = 
@@ -1020,6 +1022,7 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
+Saving... =
 
 # Options
 
@@ -1691,6 +1694,11 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
  # Requires translation!
 Language = 
  # Requires translation!
@@ -2925,6 +2933,22 @@ Bonus when intercepting [amount]% =
 Ambush I = 
  # Requires translation!
 Ambush II = 
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
  # Requires translation!
