--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -144,6 +144,8 @@ Machu Picchu = Machu Picchu
  # Requires translation!
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = Aur din toate rutele comerciale +25%
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Apeduct
 40% of food is carried over after a new citizen is born = 40% din hrană este păstrată după ce se naște un nou cetățean
@@ -754,6 +756,7 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
+Saving... =
 
 # Options
 
@@ -1175,6 +1178,11 @@ Resolution = Rezoluție
 Tileset = 
  # Requires translation!
 Map editor = 
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Limbă
  # Requires translation!
 Terrains & Resources = 
@@ -2036,6 +2044,22 @@ Reduces damage taken from interception by 50% =
 Bonus when intercepting [amount]% = 
 Ambush I = Ambuscadă I
 Ambush II = Ambuscadă II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
  # Requires translation!
 Can carry 2 aircraft = 
  # Requires translation!
