--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -119,6 +119,8 @@ Mint = Para Bas
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'İnka Diyarı'nın tacı Machu Picchu'nun çıkıntılı uçurumlarının üzerindeki granit kaleyi aşkların pek azı aşar.' - Hiram Bingham
 Gold from all trade routes +25% = Tüm ticaret yollarından altın +25%
+ # Requires translation!
+Must have an owned mountain within 2 tiles = 
 
 Aqueduct = Su Kemeri
 40% of food is carried over after a new citizen is born = Yiyeceklerin 40%'ı yeni bir vatandaş doğduktan sonra taşınıyor
@@ -631,6 +633,7 @@ Are you sure you want to delete this map? = Bu haritayı silmek istediğinizden 
 Upload map = Haritayı yükle
 Could not upload map! = Harita yüklenemedi!
 Map uploaded successfully! = Harita başarıyla yüklendi!
+Saving... =
 
 # Options
 
@@ -978,6 +981,11 @@ Version = Sürüm
 Resolution = Çözünürlük
 Tileset = Grafik seti
 Map editor = Harita düzenleyici
+Create =
+ # Requires translation!
+New map = 
+ # Requires translation!
+Empty = 
 Language = Dil
 Terrains & Resources = Araviler & Kaynaklar
 Improvements = Geliştirmeler
@@ -1659,6 +1667,22 @@ Reduces damage taken from interception by 50% = Toplamadan alınan hasarı% 50 a
 Bonus when intercepting [amount]% = [amount]% ele geçirilirken bonus
 Ambush I = Pusu 1
 Ambush II = Pusu 2
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++25% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Can carry 2 aircraft = 2 uçak taşıyabilir
 Haka War Dance = Haka Savaş Dansı
 -10% combat strength for adjacent enemy units = Bitişik düşman birimleri için% -10 savaş gücü
