Translation template fixes

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -684,7 +684,8 @@ Are you sure you want to delete this map? = Jste si jistý(á), že chcete smaza
 Upload map = Nahrát mapu
 Could not upload map! = Nelze nahrát mapu!
 Map uploaded successfully! = Mapa úspěšně nahrána!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1045,7 +1046,8 @@ Version = Verze
 Resolution = Rozlišení
 Tileset = Políčka
 Map editor = Editor mapy
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
