--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1133,7 +1133,8 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1805,7 +1806,8 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
