--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -678,7 +678,8 @@ Are you sure you want to delete this map? = Karte wirklich löschen?
 Upload map = Karte hochladen
 Could not upload map! = Kann Karte nicht hochladen!
 Map uploaded successfully! = Karte hochladen war erfolgreich!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1039,7 +1040,8 @@ Version = Version
 Resolution = Auflösung
 Tileset = Felderset
 Map editor = Karteneditor
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
