--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -689,7 +689,8 @@ Are you sure you want to delete this map? = Apakah yakin untuk menghapus peta in
 Upload map = Upload peta
 Could not upload map! = Tidak bisa upload peta!
 Map uploaded successfully! = Map telah sukses diupload!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1084,7 +1085,8 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
