--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -633,7 +633,8 @@ Are you sure you want to delete this map? = Vuoi davvero cancellare questa mappa
 Upload map = Carica
 Could not upload map! = Impossibile caricare mappa!
 Map uploaded successfully! = Mappa caricata con successo
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -981,7 +982,8 @@ Version = Versione
 Resolution = Risoluzione
 Tileset = Set celle
 Map editor = Editor mappe
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
