--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -756,7 +756,8 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1178,7 +1179,8 @@ Resolution = Rezoluție
 Tileset = 
  # Requires translation!
 Map editor = 
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
