--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -663,7 +663,8 @@ Are you sure you want to delete this map? = ¿Estas seguro de que quieres borrar
 Upload map = Subir mapa
 Could not upload map! = ¡No se pudo subir el mapa!
 Map uploaded successfully! = ¡Se ha subido el mapa correctamente!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1012,7 +1013,8 @@ Version = Versión
 Resolution = Resolución
 Tileset = Tileset
 Map editor = Editor de mapa
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
