--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -678,7 +678,8 @@ Are you sure you want to delete this map? = 你真的想刪除這張地圖嗎？
 Upload map = 上傳地圖
 Could not upload map! = 無法上傳地圖！
 Map uploaded successfully! = 成功上傳地圖！
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1041,7 +1042,8 @@ Version = 版本
 Resolution = 解析度
 Tileset = 地塊設定
 Map editor = 地圖編輯器
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
