--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -633,7 +633,8 @@ Are you sure you want to delete this map? = Bu haritayı silmek istediğinizden 
 Upload map = Haritayı yükle
 Could not upload map! = Harita yüklenemedi!
 Map uploaded successfully! = Harita başarıyla yüklendi!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -981,7 +982,8 @@ Version = Sürüm
 Resolution = Çözünürlük
 Tileset = Grafik seti
 Map editor = Harita düzenleyici
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
