--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -632,7 +632,8 @@ Are you sure you want to delete this map? = Ви впевнені, що бажа
 Upload map = Вивантажити мапу
 Could not upload map! = Неможливо вивантажити мапу!
 Map uploaded successfully! = Мапа вивантажена успішно!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -980,7 +981,8 @@ Version = Версія
 Resolution = Роздільність
 Tileset = Палітра клітинок
 Map editor = Редактор мап
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
