--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -634,7 +634,8 @@ Are you sure you want to delete this map? = Etes-vous certain de vouloir supprim
 Upload map = Télécharger une carte
 Could not upload map! = Impossible de télécharger la carte !
 Map uploaded successfully! = Carte téléchargée avec succès !
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -982,7 +983,8 @@ Version = Version
 Resolution = Résolution
 Tileset = Taille des cases
 Map editor = Editeur de carte
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
