--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -1022,7 +1022,8 @@ Upload map =
 Could not upload map! = 
  # Requires translation!
 Map uploaded successfully! = 
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1694,7 +1695,8 @@ Resolution =
 Tileset = 
  # Requires translation!
 Map editor = 
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
