--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -696,7 +696,8 @@ Are you sure you want to delete this map? = Tem certeza que quer deletar esse ma
 Upload map = Carregar mapa
 Could not upload map! = Não foi possível carregar mapa!
 Map uploaded successfully! = Mapa carregado com sucesso!
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -1134,7 +1135,8 @@ Version = Versão
 Resolution = Resolução
 Tileset = Estilo mapa
 Map editor = Editor de mapa
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
