--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -637,7 +637,8 @@ Are you sure you want to delete this map? = 您真想删除这张地图吗？
 Upload map = 上传地图
 Could not upload map! = 无法上传地图！
 Map uploaded successfully! = 地图上传成功！
-Saving... =
+ # Requires translation!
+Saving... = 
 
 # Options
 
@@ -986,7 +987,8 @@ Version = 版本
 Resolution = 分辨率
 Tileset = 地块设置
 Map editor = 地图编辑器
-Create =
+ # Requires translation!
+Create = 
  # Requires translation!
 New map = 
  # Requires translation!
