Adds missing translation "+15% production of land units"

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -139,6 +139,8 @@ Longhouse = Dlouhý dům
 +1 Production from each worked Forest tile = +1 produkce pro každého dělníka na políčku s lesem
 
 Forge = Kovárna
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Přístav
 +1 production from all sea resources worked by the city = +1 produkce ze všech mořských zdrojů využívaných městem
