--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -189,7 +189,9 @@ Longhouse =
 +1 Production from each worked Forest tile = 
 
  # Requires translation!
-Forge = 
+Forge =
+ # Requires translation!
++15% production of land units = 
 
  # Requires translation!
 Harbor = 
