--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -134,6 +134,7 @@ Longhouse = Longère
 +1 Production from each worked Forest tile = +1 production pour chaque cases de forêt exploitées par la ville.
 
 Forge = Forge
++15% production of land units = +15% à la production d'unités terrestre
 
 Harbor = Havre
 +1 production from all sea resources worked by the city = +1 de production pour toutes les ressources maritimes exploitées par la ville
