--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -139,6 +139,8 @@ Longhouse = Langhaus
 +1 Production from each worked Forest tile = +1 Produktion von jedem bewirtschafteten Waldfeld
 
 Forge = Schmiede
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Hafen
 +1 production from all sea resources worked by the city = +1 Produktion von allen Meer Ressourcen die von dieser Stadt bewirtschaftet werden
