--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -141,6 +141,8 @@ Longhouse = Bengkel Panjang
 +1 Production from each worked Forest tile = +1 Produksi dari daerah hutan yang dikelolah
 
 Forge = Penempa Besi
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Pelabuhan
 +1 production from all sea resources worked by the city = +1 Produksi dari semua sumber daya laut yang dikelolah di kota ini
