--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -134,6 +134,8 @@ Longhouse = Casa Lunga
 +1 Production from each worked Forest tile = +1 Produzione da ogni casella di Foresta sfruttata dalla città
 
 Forge = Fucina
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Porto
 +1 production from all sea resources worked by the city = +1 Produzione per ogni risorsa marittima sfruttata
