--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -151,6 +151,8 @@ Longhouse = 롱하우스
 +1 Production from each worked Forest tile = 도시에서 작업하는 숲 타일마다 생산력 +1
 
 Forge = 대장간
+ # Requires translation!
++15% production of land units = 
 
 Harbor = 항만
 +1 production from all sea resources worked by the city = 도시에서 작업하는 모든 해양 자원의 생산력 +1
