--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -134,6 +134,8 @@ Longhouse = Długi dom
 +1 Production from each worked Forest tile = +1 do produkcji za każde pracujące pole lasu
 
 Forge = Kuźnia
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Port
 +1 production from all sea resources worked by the city = +1 do produkcji za każdy wydobywany surowiec morski
