--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -139,6 +139,8 @@ Longhouse = Casa longa
 +1 Production from each worked Forest tile = +1 de produção de cada solo de floresta trabalhado.
 
 Forge = Forja
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Porto
 +1 production from all sea resources worked by the city = 1+ de produção de todos os recursos marítimos trabalhados pelo cidade
