--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -163,6 +163,8 @@ Longhouse =
 +1 Production from each worked Forest tile = 
 
 Forge = Forjă
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Port
 +1 production from all sea resources worked by the city = +1 producție din toate resursele maritime prelucrate de oraș
