--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -134,6 +134,8 @@ Longhouse = Длинный дом
 +1 Production from each worked Forest tile = +1 Производства за каждую обрабатываемую лесную клетку
 
 Forge = Кузница
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Порт
 +1 production from all sea resources worked by the city = +1 Производство от всех обрабатываемых городом морских клеток
