--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -137,6 +137,8 @@ Longhouse = 长屋
 +1 Production from each worked Forest tile = 每个工作的森林地块+1产能
 
 Forge = 锻造场
+ # Requires translation!
++15% production of land units = 
 
 Harbor = 港口
 +1 production from all sea resources worked by the city = 所在城市每个已开发的海洋资源+1产能
