--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -134,6 +134,8 @@ Longhouse = Casa comunal
 +1 Production from each worked Forest tile = +1 de producción por cada casilla de Bosque explotada
 
 Forge = Forja
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Puerto
 +1 production from all sea resources worked by the city = +1 de produccion a todos los recursos acuaticos trabajados por la ciudad
