--- a/android/assets/jsons/translationsByLanguage/Thai.properties
+++ b/android/assets/jsons/translationsByLanguage/Thai.properties
@@ -128,6 +128,8 @@ Longhouse = บ้านหลังยาวของชาวป่า
 +1 Production from each worked Forest tile = +1 การผลิตจากการทำงานบนช่องพื้นที่ป่า
 
 Forge = โรงตีเหล็ก
+ # Requires translation!
++15% production of land units = 
 
 Harbor = ท่าเรือ
 +1 production from all sea resources worked by the city = +1 การผลิตจากทรัพยากรทางทะเลทั้งหมดที่ได้จากการทำงานใกล้เมือง
