--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -138,6 +138,8 @@ Longhouse = 長屋
 +1 Production from each worked Forest tile = 每個工作的森林地區+1產能
 
 Forge = 鍛造場
+ # Requires translation!
++15% production of land units = 
 
 Harbor = 港口
 +1 production from all sea resources worked by the city = 所在城市每個已開發的海洋資源+1產能
