--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -133,6 +133,8 @@ Longhouse = Довгий будинок
 +1 Production from each worked Forest tile = +1 виробництво за кожну робочу лісову клітинку
 
 Forge = Кузня
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Гавань
 +1 production from all sea resources worked by the city = +1 виробництво за усі робочі морські ресурси міста
