--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -132,7 +132,9 @@ Workshop =
 Longhouse = 
 +1 Production from each worked Forest tile = 
 
-Forge = 
+Forge =
+ # Requires translation!
++15% production of land units = 
 
 Harbor = 
 +1 production from all sea resources worked by the city = 
