--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -227,7 +227,9 @@ Longhouse =
 +1 Production from each worked Forest tile = 
 
  # Requires translation!
-Forge = 
+Forge =
+ # Requires translation!
++15% production of land units = 
 
  # Requires translation!
 Harbor = 
