--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -134,6 +134,8 @@ Longhouse = Uzun Ev
 +1 Production from each worked Forest tile = Çalışılan her Ormandan +1 üretim
 
 Forge = Demirci Ocağı
+ # Requires translation!
++15% production of land units = 
 
 Harbor = Liman
 +1 production from all sea resources worked by the city = Şehrin çalıştığı tüm deniz kaynaklarından +1 üretim
