--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -119,8 +119,7 @@ Mint = Para Bas
 Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'İnka Diyarı'nın tacı Machu Picchu'nun çıkıntılı uçurumlarının üzerindeki granit kaleyi aşkların pek azı aşar.' - Hiram Bingham
 Gold from all trade routes +25% = Tüm ticaret yollarından altın +25%
- # Requires translation!
-Must have an owned mountain within 2 tiles = 
+Must have an owned mountain within 2 tiles = 2 bölge çapında sahip olunan bir dağ olmalı
 
 Aqueduct = Su Kemeri
 40% of food is carried over after a new citizen is born = Yiyeceklerin 40%'ı yeni bir vatandaş doğduktan sonra taşınıyor
@@ -633,8 +632,7 @@ Are you sure you want to delete this map? = Bu haritayı silmek istediğinizden 
 Upload map = Haritayı yükle
 Could not upload map! = Harita yüklenemedi!
 Map uploaded successfully! = Harita başarıyla yüklendi!
- # Requires translation!
-Saving... = 
+Saving... = Kaydediliyor...
 
 # Options
 
@@ -982,12 +980,9 @@ Version = Sürüm
 Resolution = Çözünürlük
 Tileset = Grafik seti
 Map editor = Harita düzenleyici
- # Requires translation!
-Create = 
- # Requires translation!
-New map = 
- # Requires translation!
-Empty = 
+Create = Oluştur
+New map = Yeni harita
+Empty = Boş
 Language = Dil
 Terrains & Resources = Araviler & Kaynaklar
 Improvements = Geliştirmeler
@@ -1427,7 +1422,7 @@ Manufactory = Fabrika
 Customs house = Gümrük Dairesi
 Moai = Moai
 +1 additional Culture for each adjacent Moai = Her bitişik Moai için +1 ek Kültür
-Can only be built on Coastal tiles = Sadece kıyı fayansları üzerine inşa edilebilir
+Can only be built on Coastal tiles = Sadece kıyı üzerine inşa edilebilir
 Barbarian encampment = Barbar Kampı
 
 # Unit types 
@@ -1669,22 +1664,14 @@ Reduces damage taken from interception by 50% = Toplamadan alınan hasarı% 50 a
 Bonus when intercepting [amount]% = [amount]% ele geçirilirken bonus
 Ambush I = Pusu 1
 Ambush II = Pusu 2
- # Requires translation!
-Armor Plating I = 
- # Requires translation!
-Armor Plating II = 
- # Requires translation!
-Armor Plating III = 
- # Requires translation!
-+25% Combat Bonus when defending = 
- # Requires translation!
-Flight Deck I = 
- # Requires translation!
-Flight Deck II = 
- # Requires translation!
-Flight Deck III = 
- # Requires translation!
-Can carry 1 extra air unit = 
+Armor Plating I = Zırh Kaplama 1
+Armor Plating II = Zırh Kaplama 2
+Armor Plating III = Zırh Kaplama 3
++25% Combat Bonus when defending = Savunurken +25% Savaş Bonusu
+Flight Deck I = Uçuş Güvertesi 1
+Flight Deck II = Uçuş Güvertesi 2
+Flight Deck III = Uçuş Güvertesi 3
+Can carry 1 extra air unit = Fazladan 1 hava birimi taşıyabilir
 Can carry 2 aircraft = 2 uçak taşıyabilir
 Haka War Dance = Haka Savaş Dansı
 -10% combat strength for adjacent enemy units = Bitişik düşman birimleri için% -10 savaş gücü
