--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -120,7 +120,7 @@ Machu Picchu = Machu Picchu
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 'Niewiele romansów może się równać ze związkiem granitowej cytadeli stojącej na strzelistych urwiskach Machu Picchu, korony Kraju Inków.' – Hiram Bingham
 Gold from all trade routes +25% = +25% złota ze wszystkich szlaków handlowych
  # Requires translation!
-Must have an owned mountain within 2 tiles = 
+Must have an owned mountain within 2 tiles = Wymagana jest góra w odległości do 2 pól
 
 Aqueduct = Akwedukt
 40% of food is carried over after a new citizen is born = 40% więcej żywności za każdego nowego obywatela
@@ -159,7 +159,7 @@ Porcelain Tower = Porcelanowa Wieża
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 'Kiedy patrzymy w przeszłość, wszystko wydaje się piękniejsze i właśnie w tej niedostępnej wieży przeszłości rodzi się Tęsknota.' - James Russell Lowell
 Free great scientist appears = Pojawia się darmowy Wielki Naukowiec
  # Requires translation!
-Science gained from research agreements +50% = 
+Science gained from research agreements +50% = +50% nauki za umowy naukowe
 
 Ironworks = Huta
 Armory = Zbrojownia
@@ -635,7 +635,7 @@ Upload map = Prześlij mapę
 Could not upload map! = Nie udało się przesłać mapy
 Map uploaded successfully! = Mapa została przesłana pomyślnie
  # Requires translation!
-Saving... = 
+Saving... = Zapisywanie...
 
 # Options
 
@@ -711,7 +711,7 @@ A [unitName] has joined us! = [unitName] włączyła się w nasze szeregi!
 An ancient tribe trains our [unitName] in their ways of combat! = Starożytne plemie nauczyło jednostkę [unitName] ich sztuk walki!
 We have found a stash of [amount] gold in the ruins! = Znaleźliśmy w ruinach [amount] złota!
  # Requires translation!
-We have found a crudely-drawn map in the ruins! = 
+We have found a crudely-drawn map in the ruins! = Znaleźliśmy mapę nieodkrytych terenów w ruinach!
 [unit] finished exploring. = Jednostka [unit] zakończyła eksplorację.
 [unit] has no work to do. = Jednostka [unit] jest bez zajęcia.
 You're losing control of [name]. = Tracisz kontrolę nad [name].
@@ -985,11 +985,11 @@ Resolution = Rozdzielczość
 Tileset = Pola
 Map editor = Edytor Map
  # Requires translation!
-Create = 
+Create = Stwórz
  # Requires translation!
-New map = 
+New map = Nowa mapa
  # Requires translation!
-Empty = 
+Empty = Pusta
 Language = Język
 Terrains & Resources = Teren i Zasoby
 Improvements = Ulepszenia
@@ -1314,7 +1314,7 @@ Who knows what the future holds? = Kto wie, co kryje przyszłość?
 Improves movement speed on roads = Zwiększa prędkość poruszania się na drogach
 Enables conversion of city production to science = Umożliwia konwersję produkcji miejskiej na naukę
  # Requires translation!
-Enables Research agreements = 
+Enables Research agreements = Odblokowuje umowy naukowe
 Enables conversion of city production to gold = Umożliwia konwersję produkcji miejskiej na złoto
 Enables embarkation for land units = Umożliwia jednostkom naziemnym zaokrętować
 Enables embarked units to enter ocean tiles = Umożliwia zaokrętowanym jednostkom wpłynąć na pola oceanu
@@ -1673,21 +1673,21 @@ Bonus when intercepting [amount]% = Bonus podczas przechwytywania o [amount]%
 Ambush I = Zasadzka I (lotnictwo)
 Ambush II = Zasadzka II (lotnictwo)
  # Requires translation!
-Armor Plating I = 
+Armor Plating I = Opancerzenie I
  # Requires translation!
-Armor Plating II = 
+Armor Plating II = Opancerzenie II
  # Requires translation!
-Armor Plating III = 
+Armor Plating III = Opancerzenie III
  # Requires translation!
-+25% Combat Bonus when defending = 
++25% Combat Bonus when defending = +25% siły bojowej podczas obrony
  # Requires translation!
-Flight Deck I = 
+Flight Deck I = Pokład lotniczy I
  # Requires translation!
-Flight Deck II = 
+Flight Deck II = Pokład lotniczy II
  # Requires translation!
-Flight Deck III = 
+Flight Deck III = Pokład lotniczy III
  # Requires translation!
-Can carry 1 extra air unit = 
+Can carry 1 extra air unit = Może przenieść 1 dodatkową jednostkę
 Can carry 2 aircraft = Może przenieść dwa samoloty
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
